k8s/kompose/k8s-app-monitor-agent-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.10.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: k8s-app-monitor-agent
  name: k8s-app-monitor-agent
spec:
  ports:
  - name: "8888"
    port: 8888
    targetPort: 8888
  selector:
    io.kompose.service: k8s-app-monitor-agent
status:
  loadBalancer: {}
