k8s/kompose/k8s-app-monitor-test-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.10.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: k8s-app-monitor-test
  name: k8s-app-monitor-test
spec:
  ports:
  - name: "3000"
    port: 3000
    targetPort: 3000
  selector:
    io.kompose.service: k8s-app-monitor-test
status:
  loadBalancer: {}
